--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@loopback/example-rest-crud",
   "version": "1.6.0",
-  "description": "An example showing how to use @loopback/rest-crud to define default repository and controller classes",
+  "description": "HOA",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "engines": {
@@ -45,9 +45,13 @@
     "@loopback/rest": "^6.0.0",
     "@loopback/rest-crud": "^0.8.11",
     "@loopback/rest-explorer": "^2.2.8",
+    "csv-parser": "^2.3.3",
+    "form-data": "^3.0.0",
     "loopback-connector-mongodb": "^5.3.0",
     "loopback-connector-rest": "^3.7.0",
-    "tslib": "^2.0.0"
+    "multer": "^1.4.2",
+    "tslib": "^2.0.0",
+    "xlsx": "^0.16.5"
   },
   "devDependencies": {
     "@loopback/build": "^6.2.0",
@@ -55,6 +59,7 @@
     "@loopback/http-caching-proxy": "^2.1.11",
     "@loopback/testlab": "^3.2.2",
     "@types/lodash": "^4.14.158",
+    "@types/multer": "^1.4.3",
     "@types/node": "^10.17.28",
     "eslint": "^7.6.0",
     "lodash": "^4.17.19",
