--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "@loopback/rest": "^6.0.0",
     "@loopback/rest-crud": "^0.8.11",
     "@loopback/rest-explorer": "^2.2.8",
+    "@types/node-xlsx": "^0.15.0",
     "csv-parser": "^2.3.3",
     "form-data": "^3.0.0",
     "loopback-connector-mongodb": "^5.3.0",
     "loopback-connector-rest": "^3.7.0",
     "multer": "^1.4.2",
+    "node-xlsx": "^0.15.0",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.5"
   },
