--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,3 @@
-{"$schema":"http://json.schemastore.org/tsconfig","extends":"@loopback/build/config/tsconfig.common.json","compilerOptions":{"outDir":"dist","rootDir":"src","composite":false},"include":["src/**/*","src/**/*.json"]}
+{"$schema":"http://json.schemastore.org/tsconfig","extends":"@loopback/build/config/tsconfig.common.json","compilerOptions":{
+  "experimentalDecorators": true,"outDir":"dist","rootDir":"src","composite":false
+},"include":["src/**/*","src/**/*.json"]}
